2006-12-21  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/30273
	* gfortran.dg/dependency_19.f90: New test.

2006-12-21  Steven G. Kargl  <kargl@gcc.gnu.org>

        PR fortran/30207
        * gfortran.fortran-torture/execute/where21.f90: New test.

2006-12-21  Paul Thomas  <pault@gcc.gnu.org>
	    Tobias Burnus  <burnus@gcc.gnu.org>

	PR fortran/29975
	PR fortran/30068
	* gfortran.dg/interface_4.f90: Test adding procedure to generic
	interface.
	* gfortran.dg/interface_5.f90: Test warning for not-referenced-to
	ambiguous interfaces.
	* gfortran.dg/interface_6.f90: Test invalid, ambiguous interface.
	* gfortran.dg/interface_7.f90: Test invalid, ambiguous interface.
	* gfortran.dg/interface_8.f90: Test warning for not-referenced-to
	ambiguous interfaces.
	* gfortran.dg/interface_1.f90: Change dg-error into a dg-warning.
	* gfortran.dg/array_initializer_2.f90: Add initializer array
	constructor test.

	PR fortran/30096
	* gfortran.dg/interface_9.f90: Test that host interfaces are
	not checked for ambiguity with the local version.

2006-12-21  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/29941
	* gfortran.dg/assumed_len.f90: New test.

2006-11-21  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/29464
	* gfortran.dg/module_interface_2.f90: New test.

2006-12-21  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/30262
	* gcc.c-torture/execute/20061220-1.c: New test.

	PR middle-end/30263
	* gcc.dg/gomp/asm-1.c: New test.

	PR target/30230
	* g++.dg/eh/ia64-2.C: New test.

2006-12-20  Bill Wendling  <wendling@apple.com>

	* gcc.dg/asm-b.c: Check for __ppc64__.

2006-12-18  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/30145
	* gfortran.dg/write_zero_array.f90: New test.

2006-12-18  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/30200
	* gfortran.dg/write_fmt_trim.f90: New test.

2006-12-18  Bill Wendling  <wendling@apple.com>

	* g++.old-deja/g++.mike/p11144.C: Renamed id to ID because
	id is an OjbC keyword.
