@@ -1,3 +1,9 @@
+2006-12-29  Jakub Jelinek  <jakub@redhat.com>
+
+	PR preprocessor/29612
+	* gcc.dg/cpp/pr29612-1.c: New test.
+	* gcc.dg/cpp/pr29612-2.c: New test.
+
 2006-12-21  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/30273
